--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,11 +1,29 @@
-@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300;400;500&display=swap" rel="stylesheet');
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@300;400;500;600&family=Rubik:wght@300;400;500&display=swap" rel="stylesheet');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
   body {
-    background-color: #181818;
+    background-color: #1c1b1c;
     color: white;
   }
+}
+
+@layer components {
+  .carousel-container {
+    @apply relative flex items-center justify-center h-[22rem] w-[35rem] mb-[3rem] mt-[1rem];
+    perspective: 450px;
+    transform-style: preserve-3d;
+  }
+
+  .carousel-item {
+    @apply absolute h-full w-full bg-20222e rounded-xl px-10 py-4 overflow-hidden shadow-[0_3px_10px_rgb(0,0,0,0.2)] transition-all duration-700;
+  }
+
+  .carousel-btn-switch-card {
+    @apply relative z-40 flex h-9 w-9 cursor-pointer items-center justify-center rounded-full border-2 border-[#302e30] bg-[#181818] text-2xl opacity-75 transition duration-300 hover:opacity-100 md:h-12 md:w-12
+  }
+  
 }
